<resources>
    <string name="app_name">Exercise3</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="tv1Text">Number:</string>
    <string name="et1Hint">Enter</string>
    <string name="subtractone">-1</string>
    <string name="addone">+1</string>
    <string name="reset">Rest Number</string>

</resources>
